set(FCDocument_SRC
	FCDAnimated.cpp
	FCDAnimation.cpp
	FCDAnimationChannel.cpp
	FCDAnimationClip.cpp
	FCDAnimationClipTools.cpp
	FCDAnimationCurve.cpp
	FCDAnimationCurveTools.cpp
	FCDAnimationKey.cpp
	FCDAnimationMultiCurve.cpp
	FCDAsset.cpp
	FCDCamera.cpp
	FCDController.cpp
	FCDControllerInstance.cpp
	FCDControllerTools.cpp
	FCDEffect.cpp
	FCDEffectCode.cpp
	FCDEffectParameter.cpp
	FCDEffectParameterFactory.cpp
	FCDEffectParameterSampler.cpp
	FCDEffectParameterSurface.cpp
	FCDEffectPass.cpp
	FCDEffectPassShader.cpp
	FCDEffectPassState.cpp
	FCDEffectProfile.cpp
	FCDEffectProfileFX.cpp
	FCDEffectStandard.cpp
	FCDEffectTechnique.cpp
	FCDEffectTools.cpp
	FCDEmitter.cpp
	FCDEmitterInstance.cpp
	FCDEmitterObject.cpp
	FCDEmitterParticle.cpp
	FCDEntity.cpp
	FCDEntityInstance.cpp
	FCDEntityReference.cpp
	FCDExternalReferenceManager.cpp
	FCDExtra.cpp
	FCDForceDeflector.cpp
	FCDForceDrag.cpp
	FCDForceField.cpp
	FCDForceGravity.cpp
	FCDForcePBomb.cpp
	FCDForceWind.cpp
	FCDGeometry.cpp
	FCDGeometryInstance.cpp
	FCDGeometryMesh.cpp
	FCDGeometryNURBSSurface.cpp
	FCDGeometryPolygons.cpp
	FCDGeometryPolygonsInput.cpp
	FCDGeometryPolygonsTools.cpp
	FCDGeometrySource.cpp
	FCDGeometrySpline.cpp
	FCDImage.cpp
	FCDLibrary.cpp
	FCDLight.cpp
	FCDLightTools.cpp
	FCDMaterial.cpp
	FCDMaterialInstance.cpp
	FCDMorphController.cpp
	FCDObject.cpp
	FCDObjectWithId.cpp
	FCDocument.cpp
	FCDocumentTools.cpp
	FCDParameterAnimatable.cpp
	FCDParticleModifier.cpp
	FCDPhysicsAnalyticalGeometry.cpp
	FCDPhysicsForceFieldInstance.cpp
	FCDPhysicsMaterial.cpp
	FCDPhysicsModel.cpp
	FCDPhysicsModelInstance.cpp
	FCDPhysicsRigidBody.cpp
	FCDPhysicsRigidBodyInstance.cpp
	FCDPhysicsRigidBodyParameters.cpp
	FCDPhysicsRigidConstraint.cpp
	FCDPhysicsRigidConstraintInstance.cpp
	FCDPhysicsScene.cpp
	FCDPhysicsShape.cpp
	FCDPlaceHolder.cpp
	FCDSceneNode.cpp
	FCDSceneNodeIterator.cpp
	FCDSceneNodeTools.cpp
	FCDSkinController.cpp
	FCDTargetedEntity.cpp
	FCDTexture.cpp
	FCDTransform.cpp
	FCDVersion.cpp
)

set(FCDocument_H
	FCDAnimated.h
	FCDAnimation.h
	FCDAnimationChannel.h
	FCDAnimationClip.h
	FCDAnimationClipTools.h
	FCDAnimationCurve.h
	FCDAnimationCurveTools.h
	FCDAnimationKey.h
	FCDAnimationMultiCurve.h
	FCDAsset.h
	FCDCamera.h
	FCDController.h
	FCDControllerInstance.h
	FCDControllerTools.h
	FCDEffect.h
	FCDEffectCode.h
	FCDEffectParameter.h
	FCDEffectParameterFactory.h
	FCDEffectParameterSampler.h
	FCDEffectParameterSurface.h
	FCDEffectPass.h
	FCDEffectPassShader.h
	FCDEffectPassState.h
	FCDEffectProfile.h
	FCDEffectProfileFX.h
	FCDEffectStandard.h
	FCDEffectTechnique.h
	FCDEffectTools.h
	FCDEmitter.h
	FCDEmitterInstance.h
	FCDEmitterObject.h
	FCDEmitterParticle.h
	FCDEntity.h
	FCDEntityInstance.h
	FCDEntityReference.h
	FCDExternalReferenceManager.h
	FCDExtra.h
	FCDForceDeflector.h
	FCDForceDrag.h
	FCDForceField.h
	FCDForceGravity.h
	FCDForcePBomb.h
	FCDForceTyped.h
	FCDForceWind.h
	FCDGeometry.h
	FCDGeometryInstance.h
	FCDGeometryMesh.h
	FCDGeometryNURBSSurface.h
	FCDGeometryPolygons.h
	FCDGeometryPolygonsInput.h
	FCDGeometryPolygonsTools.h
	FCDGeometrySource.h
	FCDGeometrySpline.h
	FCDImage.h
	FCDLibrary.h
	FCDLight.h
	FCDLightTools.h
	FCDMaterial.h
	FCDMaterialInstance.h
	FCDMorphController.h
	FCDObject.h
	FCDObjectWithId.h
	FCDocument.h
	FCDocumentTools.h
	FCDParameterAnimatable.h
	FCDParticleEmitter.h
	FCDParticleModifier.h
	FCDPhysicsAnalyticalGeometry.h
	FCDPhysicsForceFieldInstance.h
	FCDPhysicsMaterial.h
	FCDPhysicsModel.h
	FCDPhysicsModelInstance.h
	FCDPhysicsRigidBody.h
	FCDPhysicsRigidBodyInstance.h
	FCDPhysicsRigidBodyParameters.h
	FCDPhysicsRigidConstraint.h
	FCDPhysicsRigidConstraintInstance.h
	FCDPhysicsScene.h
	FCDPhysicsShape.h
	FCDPlaceHolder.h
	FCDSceneNode.h
	FCDSceneNodeIterator.h
	FCDSceneNodeTools.h
	FCDSkinController.h
	FCDTargetedEntity.h
	FCDTexture.h
	FCDTransform.h
	FCDVersion.h
)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}
                    ${CMAKE_CURRENT_BINARY_DIR}
)


add_library(FCDocument ${FCDocument_H} ${FCDocument_SRC})
target_link_libraries(FCDocument ColladaXML)

target_include_directories(FCDocument PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
	$<INSTALL_INTERFACE:include>
)

install(TARGETS FCDocument DESTINATION lib)
install(FILES ${FCDocument_H} DESTINATION include/FCDocument)
